<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<TextView
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    android:paddingBottom="40dp"
    style="@style/welcome"
    android:text="@string/answer"/>

    <View
        style="@style/TopLine"

        android:layout_width="match_parent"
        android:layout_height="1dp" />


    <TextView
        style="@style/questions"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/question_1" />

    <View
        style="@style/BottomLine"

        android:layout_width="match_parent"
        android:layout_height="1dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_1_answer_1"
        style="@style/answers"
        android:layout_gravity="center"/>

    <View
        style="@style/TopLine"

        android:layout_width="match_parent"
        android:layout_height="1dp" />


    <TextView
        style="@style/questions"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/question_2" />

    <View
        style="@style/BottomLine"

        android:layout_width="match_parent"
        android:layout_height="1dp" />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/question_2_answer_2"
    style="@style/answers"
    android:layout_gravity="center"/>
    <View
        style="@style/TopLine"

        android:layout_width="match_parent"
        android:layout_height="1dp" />


    <TextView
        style="@style/questions"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/question_3" />

    <View
        style="@style/BottomLine"

        android:layout_width="match_parent"
        android:layout_height="1dp" />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/question_3_answer_4"
    style="@style/answers"
    android:layout_gravity="center"/>
    <View
        style="@style/TopLine"

        android:layout_width="match_parent"
        android:layout_height="1dp" />


    <TextView
        style="@style/questions"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/question_4" />

    <View
        style="@style/BottomLine"

        android:layout_width="match_parent"
        android:layout_height="1dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_4_answer_2"
        style="@style/answers"
        android:layout_gravity="center"/>
    <View
        style="@style/TopLine"

        android:layout_width="match_parent"
        android:layout_height="1dp" />


    <TextView
        style="@style/questions"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/question_5" />

    <View
        style="@style/BottomLine"

        android:layout_width="match_parent"
        android:layout_height="1dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_5_answer_4"
        style="@style/answers"
        android:layout_gravity="center"
        android:paddingBottom="20dp"/>

</LinearLayout>
</ScrollView>