<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/stars"
    tools:context="com.example.android.quizapp.Results">


    <TextView
        android:id="@+id/name"
        style="@style/nameResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/nameResults" />

    <TextView
        android:id="@+id/text"
        style="@style/results"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@id/name"
        android:text="@string/result" />

    <TextView
        android:id="@+id/result"

        style="@style/results"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/reset"
            style="@style/submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="tryAgain"
            android:text="@string/tryAgain" />

        <Button
            android:id="@+id/answers"
            style="@style/submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="answers"
            android:text="@string/answer"

            />
    </LinearLayout>

</RelativeLayout>
